fixed layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -2962,15 +2962,6 @@ code {
   background: #eee;
 }
 
-input[type="text"] {
-  padding: 12px;
-  border: 0;
-  text-family: "Cutive Mono", sans-serif;
-  width: 300px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
 
 /* --- general  --- */
 .headline h1, .headline h2, , .headline h4, .headline h5 {
@@ -3343,14 +3334,6 @@ color: #999999;
   font-weight: 300;
   line-height: 49px;
   margin: 0 0 30px 0;
-}
-.mail input {
-  padding: 15px 40px;
-}
-.mail input[type="text"] {
-  padding: 15px;
-  margin-right: 15px;
-  color: #888;
 }
 
 
